--- a/Languages/Russian/Keyed/Keys.xml
+++ b/Languages/Russian/Keyed/Keys.xml
@@ -7,6 +7,8 @@
   <WS_SettingDeselectOptions>Одновременно можно выбрать только две категории!</WS_SettingDeselectOptions>
   <WS_SettingGrenadesCategories>Подкатегория "Гранаты"</WS_SettingGrenadesCategories>
   <WS_SettingGrenadesCategoriesDescription>Следует ли создать подкатегорию для гранат?</WS_SettingGrenadesCategoriesDescription>
+  <WS_SettingBladeLinkCategories>Подкатегория "Оружие с личностью"</WS_SettingBladeLinkCategories>
+  <WS_SettingBladeLinkCategoriesDescription>Следует ли создать подкатегорию для оружия с личностью?</WS_SettingBladeLinkCategoriesDescription>
   <WS_SettingRangedCategories>Подкатегория "Оружие дальнего боя"</WS_SettingRangedCategories>
   <WS_SettingRangedCategoriesDescription>Следует ли создать подкатегорию для оружия дальнего боя?</WS_SettingRangedCategoriesDescription>
   <WS_SettingMeleeCategories>Подкатегория "Оружие ближнего боя"</WS_SettingMeleeCategories>
@@ -16,6 +18,7 @@
   <WS_SettingMod>Модификация</WS_SettingMod>
   <WS_None>Неизвестно</WS_None>
   <WS_Grenade>Гранаты</WS_Grenade>
+  <WS_BladeLink>Оружие с личностью</WS_BladeLink>
   <WS_Ranged>Оружие дальнего боя</WS_Ranged>
   <WS_Melee>Оружие ближнего боя</WS_Melee>
 </LanguageData>
