--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for WeaponsSorter
 
+1.0.6.0 - New version of 1SettingsHelper
+
+
 1.0.5.0 - Added Korean translation, thanks isty2e!
 
 
