Added version info in settings

--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -21,4 +21,5 @@
   <WS_BladeLink>Persona</WS_BladeLink>
   <WS_Ranged>Ranged</WS_Ranged>
   <WS_Melee>Melee</WS_Melee>
+  <WS_CurrentModVersion>Installed mod-version: {0}</WS_CurrentModVersion>
 </LanguageData>
