--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for WeaponsSorter
 
+1.3.3 - Will now ignore the ammo-category added by Combat extended.
+
+
 1.3.2 - Added version info in settings
 
 
