--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for WeaponsSorter
 
+1.3.5 - Bugfix for the weapon-tag addition
+
+
 1.3.4 - Added sorting by weapon-tag.
 Used DeepL to update translations for ChineseSimplified, French, Russian
 
