Mod updated for 1.4 and passed autotests

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for WeaponsSorter
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.5 - Bugfix for the weapon-tag addition
 
 
