--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for WeaponsSorter
 
+1.4.3 - Updated russian translation by Reiquard.
+Used DeepL to update translations for German
+
+
 1.4.2 - Removed old settings-helper
 
 
