--- a/Languages/ChineseSimplified/Keyed/Keys.xml
+++ b/Languages/ChineseSimplified/Keyed/Keys.xml
@@ -27,4 +27,7 @@
   <WS_SettingTag>标签</WS_SettingTag>
   <Undefined>未定义</Undefined>
   <WS_CurrentModVersion>已安装的mod-version。 {0}</WS_CurrentModVersion>
+  <WS_SettingOneHandedCategories>单手亚类</WS_SettingOneHandedCategories>
+  <WS_SettingOneHandedCategoriesDescription>可使用盾牌的单手武器是否应在一个子类别中进行分类？</WS_SettingOneHandedCategoriesDescription>
+  <WS_OneHanded>单手操作</WS_OneHanded>
 </LanguageData>
